- Admin-pages migrated to new Spring and DB-version
- New admin-release routine when new database:
-- Create a new account & Login
-- surf to: /admin/release/run
(to create fresh data)
-- Surf to /admin/release/admin
(to join logged in user to admin group)
-- Go to admin-mode and add your own user in "Users" role.

- Startpage 3 columns
- Profilepage now has "infobox"
- Profilepage has share buttons
- Tags are now blue, just to add some color
- FB & Instagram in header moved from footer
- Login-page now is double columned for easier login/registration

--- a/app/assets/stylesheets/genericons.less
+++ b/app/assets/stylesheets/genericons.less
@@ -48,7 +48,9 @@
 	-webkit-font-smoothing: antialiased;
 	speak: none;
 }
-
+.genericon:hover {
+  text-decoration: none;
+}
 
 /**
  * Individual icons
