--- a/app/views/startpage/startpageBox.scala.html
+++ b/app/views/startpage/startpageBox.scala.html
@@ -3,7 +3,7 @@
 @if(!boxes.isEmpty) {
     @for(box: models.viewmodels.StartPageBox <- boxes){
 
-        <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0">
             <a href="@box.linkToProfile">
                 @defining( if(box.mainImage.isDefined){ "style=\"background-image: url('" + box.mainImage.get + "')\"" } else { "" } ) { mainImage =>
                 <div class="thumbnail panel-startpage" @Html(mainImage)>
