Moved logic of userfavorites to service level

--- a/app/views/profile/showListOfFavorites.scala.html
+++ b/app/views/profile/showListOfFavorites.scala.html
@@ -1,10 +1,5 @@
-@(favorites: List[models.viewmodels.FavoriteForm])
-(implicit request: RequestHeader)
-
-
-
-
-
+@(favorites: List[models.viewmodels.FavoriteForm])(implicit request: RequestHeader)
+Favoriter:
                                     @for(i <- favorites) {
 
                                             <div class="panel-body">
