--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -24,6 +24,9 @@
                                 <h2>@userProfile.aboutMeHeadline</h2>
                                 @shared.grade(inputId = "host-grade", initialValue = userProfile.getOwner.getAverageRating, size = "xs", cssClass = "hdc-grade-pull-left", disabled = true, showCaption = false, showNrOfRatings = true, nrOfRatings = userProfile.getOwner.getNrOfRatings)
                                 <div class="memberid clearfix"><p><strong>@Messages("profile.memberid.text")</strong>&nbsp;@userProfile.getOwner.objectId</p></div>
+                                <a href="@routes.UserProfileController.addFavorite(userProfile.getOwner.objectId.toString())" target="_blank">Lägg till som favorit</a>
+                                <a href="@routes.UserProfileController.listFavorites()">Visa favoriter</a>
+
                                 <div class="breadtext">
                                     @Html(userProfile.aboutMe)
                                 </div>
