--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -16,6 +16,7 @@
 @hdc-gold: #a48b74;
 @hdc-black: #000;
 @hdc-red: #8E0000;
+@hdc-light-green: lighten(@hdc-green, 39%);
 
 @host-level-01-color: @hdc-green;
 @host-level-02-color: @hdc-black;
@@ -123,6 +124,10 @@ img
   padding-right:0px;
 }
 
+// General wells
+.well-hdc {
+  background-color: @hdc-light-green;
+}
 
 // General alerts
 .alert
@@ -354,6 +359,18 @@ input[type="reset"]:hover
 {
   color:@hdc-green;
 }
+.hdc-grade .star-rating.rating-active
+{
+  cursor: pointer;
+}
+.hdc-grade .star-rating.rating-active .rating-stars:hover
+{
+  color:#ff5500;
+}
+.hdc-grade .star-rating.rating-active .rating-gly-star:hover
+{
+  color:#ffddbb;
+}
 .hdc-grade .star-rating.rating-disabled
 {
   cursor: default;
@@ -373,6 +390,39 @@ input[type="reset"]:hover
   margin-left:10px;
   line-height:3.3em;
 }
+.btn-rate-popover {
+  margin-left:10px;
+}
+.rate-popover h3 {
+  margin-top:0px;
+  font-weight: bold;
+}
+.rate-popover .rating-label {
+  line-height: 3.2em;
+  display: inline-block;
+  margin-right:10px;
+}
+.rate-popover textarea {
+  width:100%;
+}
+.rate-popover .rated-before-date {
+  font-size:11px;
+}
+.rate-popover dl {
+  margin-top:20px;
+  margin-bottom:0px;
+}
+.btn-rate-popover span.glyphicon-chevron-down {
+  display: none;
+}
+.btn-rate-popover.collapsed span.glyphicon-chevron-up {
+  display: none;
+}
+.btn-rate-popover.collapsed span.glyphicon-chevron-down {
+  display: inline-block;
+}
+
+
 // Likes
 .btn-group-likes
 {
