--- a/app/views/mainedit.scala.html
+++ b/app/views/mainedit.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)(implicit flash: Flash = Flash.emptyCookie)
+@(title: String, footerScripts: Html = Html(""))(content: Html)(implicit flash: Flash = Flash.emptyCookie)
 <!DOCTYPE html>
 
 <html lang="@Messages("main.language")">
@@ -38,12 +38,14 @@
             </div>
         </div>
         @*TODO - Create controllers with local backups, also bundle *@
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="@routes.Assets.at("js/libs/jquery.1.11.1.min.js")"></script>
         <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
         <script src="@routes.Assets.at("tinymce/tinymce.min.js")"></script>
-        <script src="@routes.Assets.at("js/bootbox.min.js")"></script>
+        <script src="@routes.Assets.at("js/libs/jquery.gray.min.js")"></script>
+        <script src="@routes.Assets.at("js/libs/star-rating.2.0.0.min.js")"></script>
+        <script src="@routes.Assets.at("js/libs/bootbox.4.3.0.min.js")"></script>
         <script src="@routes.Assets.at("js/site.js")"></script>
-
         @shared.modalConfirm()
+        @footerScripts
     </body>
 </html>
