--- a/app/views/test/json.scala.html
+++ b/app/views/test/json.scala.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.1.11.1.min.js"></script>
         <script>
         $(document).ready(function(){
         $("button").click(function(){
